# quex

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  readme.md
crates/quex/: Cargo.toml
crates/quex-driver/: Cargo.toml
crates/quex-driver/src/: lib.rs
crates/quex-driver/src/mysql/: connection.rs  error.rs  mod.rs  options.rs  rows.rs  runtime.rs  statement.rs  value.rs
crates/quex-driver/src/postgres/: connection.rs  error.rs  mod.rs  options.rs  rows.rs  runtime.rs  statement.rs  value.rs
crates/quex-driver/src/sqlite/: connection.rs  error.rs  mod.rs  options.rs  rows.rs  runtime.rs  statement.rs  value.rs
crates/quex-mariadb-sys/: Cargo.toml  build.rs
crates/quex-mariadb-sys/src/: lib.rs
crates/quex-pq-sys/: Cargo.toml  build.rs
crates/quex-pq-sys/src/: lib.rs
crates/quex-sqlite3-sys/: Cargo.toml  build.rs
crates/quex-sqlite3-sys/src/: lib.rs
crates/quex/benches/: quex_vs_sqlx.rs  vs_sqlx.rs  vs_sqlx_multithread.rs  vs_sqlx_postgres.rs  vs_sqlx_sqlite.rs
crates/quex/examples/: basic.rs  postgres_basic.rs  qb.rs  quex_basic.rs  sqlite_basic.rs
crates/quex/src/: connection.rs  data.rs  error.rs  executor.rs  lib.rs  options.rs  pool.rs  rows.rs  statement.rs  tests.rs
crates/quex/tests/: perf_vs_sqlx.rs
